responsive navigation - logo implemented, fixed phone number on mobile and linked logo + phone number. Created tel: link styles

--- a/templates/leaf-base/resources/c/css/global-fixed.css
+++ b/templates/leaf-base/resources/c/css/global-fixed.css
@@ -530,6 +530,18 @@ of this comment and begin styling them.
 */
 /*
 
+Links
+
+Types: 
+Normal
+Tel: 555-555-5555
+
+*/
+[href^="tel:"] {
+  cursor: default;
+}
+/*
+
 Body Text
 
 */
@@ -1303,19 +1315,22 @@ Border Radius
   float: none;
 }
 .primary-bg {
-  background: #fa6851;
+  background-color: #fa6851;
 }
 .secondary-bg {
-  background: #339bbb;
+  background-color: #339bbb;
+}
+.secondary-bg-dark {
+  background-color: #23697f;
 }
 .tertiary-bg {
-  background: #613c4f;
+  background-color: #613c4f;
 }
 .quarternary-bg {
-  background: #fff4e4;
+  background-color: #fff4e4;
 }
 .white-bg {
-  background: #ffffff;
+  background-color: #ffffff;
 }
 .wrapper {
   width: 92%;
@@ -1327,12 +1342,11 @@ Border Radius
   padding-bottom: 5.3125em;
 }
 .top-header {
-  background: #23697f;
   padding-top: 0.3125em;
   padding-bottom: 0.3125em;
 }
 .middle-header {
-  background: #339bbb;
+  background-color: #339bbb;
 }
 .bottom-header {
   border-bottom: solid 1px #e9e9e9;
@@ -1352,6 +1366,14 @@ Border Radius
 .main-nav .main-nav__link:hover {
   background: #23697f;
 }
+.logo {
+  position: relative;
+  top: -0.3125em;
+  left: 0;
+}
+.link--phone {
+  color: #339bbb;
+}
 .secondary-nav {
   display: none;
 }
@@ -1366,7 +1388,7 @@ Border Radius
 }
 .tertiary-nav a.cart {
   color: #ffffff;
-  background: #fa6851;
+  background-color: #fa6851;
 }
 .tertiary-nav a.cart:hover {
   background: #f95238;
