--- a/templates/leaf-base/resources/less/_theme/_type/t-type.less
+++ b/templates/leaf-base/resources/less/_theme/_type/t-type.less
@@ -152,6 +152,20 @@ of this comment and begin styling them.
 
 */
 
+/*
+
+Links
+
+Types: 
+Normal
+Tel: 555-555-5555
+
+*/
+
+[href^="tel:"] {
+	cursor: default;
+}
+
 
 
 /*
